tests/bug_detector_tests/shadowingVarFunc2.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=shadowingVarFunc2
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
${BUGDETECTOR_TESTS_DIR}/shadowingVarFunc2.js:5:9-24: \n\
    Warning: the use of FunctionDeclaration as a Statement is not allowed in ECMAScript. \n\
${BUGDETECTOR_TESTS_DIR}/shadowingVarFunc2.js:14:9-24: \n\
    Warning: the use of FunctionDeclaration as a Statement is not allowed in ECMAScript. \n\
${BUGDETECTOR_TESTS_DIR}/shadowingVarFunc2.js:23:9-24: \n\
    Warning: the use of FunctionDeclaration as a Statement is not allowed in ECMAScript. \n\
 \n\
* Bug Detector * \n\
shadowingVarFunc2.js:3:9~3:10: [Warning] Variable 'f' is shadowed by a function at '5:9-24'. \n\
shadowingVarFunc2.js:12:9~12:10: [Warning] Variable 'f' is shadowed by a function at '14:9-24'. \n\
shadowingVarFunc2.js:21:9~21:10: [Warning] Variable 'f' is shadowed by a function at '23:9-24'. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      3 (100.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      3 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
